Clean up MCP compatibility and centralize DB type detection
- remove legacy MCP contract aliases, stale fields, and old proxy preflight naming
- keep MCP model-facing contracts on canonical next_actions, target_status, and runtime database validation
- update MCP contract baselines and focused tests for the current public contract
- add connection-level branch database type resolution in DatabaseTypeFactory
- implement Doris and MariaDB actual branch checks in connector dialects
- propagate detected storage type through resource creation, validation, import, and global metadata init
- make MCP support consume DatabaseTypeFactory instead of local database type probes